--- a/css/2010.css
+++ b/css/2010.css
@@ -16,7 +16,7 @@
 	background: none !important;
 }
 
-#movie_player.html5-video-player .ytp-chrome-bottom {
+.html5-video-player.html5-video-player .ytp-chrome-bottom {
 	height: 35px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -26,7 +26,7 @@
 
 /* PROGRESS BAR */
 
-#movie_player .ytp-chrome-bottom .ytp-progress-bar-container {
+.html5-video-player .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	bottom: 34px !important;
 	height: var(--pt-progress-bar-unfocused-height);
@@ -34,8 +34,8 @@
 	border-bottom: 1px solid var(--pt-progress-bar-outline);
 }
 
-.ytp-chrome-bottom .ytp-chapters-container {
-	width: fit-content !important;
+.html5-video-player .ytp-chrome-bottom .ytp-chapters-container {
+	width: 100% !important;
 }
 
 .ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar-container {
@@ -334,13 +334,13 @@
 
 /* TIME DISPLAY */
 
-#movie_player .ytp-chrome-bottom .ytp-time-display span {
+.html5-video-player .ytp-chrome-bottom .ytp-time-display span {
     font-size: 14px;
 }
 
-#movie_player .ytp-chrome-bottom .ytp-time-display {
+.html5-video-player .ytp-chrome-bottom .ytp-time-display {
 	line-height: 47px !important;
-	padding: 0px 10px;
+	padding: 0px 10px !important;
 	margin-top: -8px;
 	font-size: 12px;
 	height: 50px;
@@ -550,33 +550,8 @@
 	display: none;
 }
 
-/* Disable all of these for 2010 */
-.ytp-playlist-menu-button.ytp-button,
-.ytp-title-channel,
-.ytp-title,
-.ytp-watch-later-button.ytp-button,
-.ytp-button.ytp-copylink-button,
-.ytp-button.ytp-overflow-button
-{
-    display: none !important;
-}
-
-.ytp-button.ytp-share-button {
-    background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-    background-position: 2px -524px;
-    background-size: 220px;
-    width: 40px !important;
-    height: 40px !important;
-}
-
-.ytp-button.ytp-cards-button {
-	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-	background-position: 5px -512px;
-	transition: .5s !important;
-	background-size: 200px;
-	width: 40px !important;
-	height: 40px !important;
-	bottom: 0px;
+.ytp-chrome-top {
+	display: none;
 }
 
 /* ################################# */
