--- a/css/2012.css
+++ b/css/2012.css
@@ -25,7 +25,7 @@
 	background: none !important;
 }
 
-#movie_player.html5-video-player .ytp-chrome-bottom {
+.html5-video-player .ytp-chrome-bottom {
 	height: 32px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -33,15 +33,15 @@
 
 /* PROGRESS BAR */
 
-#movie_player .ytp-chrome-bottom .ytp-progress-bar-container {
+.html5-video-player .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	border-bottom: 1px solid #181818;
 	bottom: 32px !important;
 	height: var(--pt-progress-bar-unfocused-height);
 }
 
-.ytp-chrome-bottom .ytp-chapters-container {
-	width: fit-content !important;
+.html5-video-player .ytp-chrome-bottom .ytp-chapters-container {
+	width: 100% !important;
 	margin-top: 1px;
 }
 
@@ -407,9 +407,9 @@
 
 /* TIME DISPLAY */
 
-#movie_player .ytp-chrome-bottom .ytp-time-display {
+.html5-video-player .ytp-chrome-bottom .ytp-time-display {
 	line-height: 47px !important;
-	padding: 0px 10px;
+	padding: 0px 10px !important;
 	margin-top: -8px;
 	font-size: 12px;
 	height: 46px;
@@ -644,90 +644,6 @@
 
 /* ################################# */
 
-/* TOP BUTTONS */
-
-.ytp-gradient-top {
-	display: none;
-}
-
-.ytp-chrome-top {
-	background: #1b1b1bed;
-	right: 0px !important;
-	left: 0px !important;
-	padding: 0px 10px;
-	height: 40px;
-}
-
-.ytd-channel-video-player-renderer .ytp-chrome-top {
-	display: none; /* this should only affect channel trailers. */
-}
-
-.ytp-big-mode .ytp-chrome-top .ytp-button {
-	padding-top: 0px;
-}
-
-.ytp-chrome-top .ytp-playlist-menu-button {
-    background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-    background-position: -78px -914px;
-    transition: .5s !important;
-    background-size: 220px;
-    width: 40px !important;
-    bottom: 5px;
-}
-
-.ytp-title-text {
-	padding: 0px !important;
-	color: #cacaca;
-}
-
-.ytp-title-link {
-    position: relative;
-    width: fit-content;
-    font-size: 18px;
-    top: 8px;
-}
-
-.ytp-title-link.yt-uix-sessionlink.ytp-title-fullerscreen-link:hover {
-	cursor: pointer;
-	color: #cacaca;
-}
-
-.ytp-chrome-top .ytp-button.ytp-share-button {
-	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-	background-position: 2px -524px;
-	transition: .5s !important;
-	background-size: 220px;
-	width: 40px !important;
-	bottom: 5px;
-}
-
-.ytp-chrome-top .ytp-button.ytp-share-button svg {
-	display: none;
-}
-
-.ytp-chrome-top .ytp-button.ytp-cards-button {
-	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-	background-position: 5px -512px;
-	transition: .5s !important;
-	background-size: 200px;
-	width: 40px !important;
-	bottom: 5px;
-}
-
-.ytp-button.ytp-watch-later-button {
-	display: none !important;
-}
-
-.ytp-share-panel-service-button svg {
-	display: inherit;
-}
-
-.ytp-share-panel-close svg {
-	margin: 0px 6px
-}
-
-/* ################################# */
-
 /* TOOLTIPS */
 
 .ytp-tooltip.ytp-bottom {
@@ -736,35 +652,6 @@
 
 .ytp-tooltip-text-wrapper .ytp-tooltip-text {
 	background-color: rgb(28, 28, 28);
-}
-
-/* ################################# */
-
-/* SETTINGS MENU */
-
-.ytp-popup {
-	background: var(--pt-settings-bg) !important;
-}
-
-.ytp-popup.ytp-settings-menu {
-	bottom: 35px !important;
-    border-radius: 0 !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-panel-menu {
-	padding: 0px !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-menuitem-icon {
-	display: none !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-menuitem .ytp-menuitem-label {
-	padding-left: 20px !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-menuitem[role="menuitemradio"] .ytp-menuitem-label {
-	padding-left: 35px !important;
 }
 
 /* ################################# */
