--- a/css/2013.css
+++ b/css/2013.css
@@ -15,7 +15,7 @@
 	background: none !important;
 }
 
-#movie_player.html5-video-player .ytp-chrome-bottom {
+.html5-video-player .ytp-chrome-bottom {
 	height: 32px !important;
 	width: 100% !important;
     left: 0 !important;
@@ -23,14 +23,14 @@
 
 /* PROGRESS BAR */
 
-#movie_player .ytp-chrome-bottom .ytp-progress-bar-container {
+.html5-video-player .ytp-chrome-bottom .ytp-progress-bar-container {
 	width: 100% !important;
 	bottom: 32px !important;
 	height: var(--pt-progress-bar-unfocused-height);
 }
 
-.ytp-chrome-bottom .ytp-chapters-container {
-	width: fit-content !important;
+.html5-video-player .ytp-chrome-bottom .ytp-chapters-container {
+	width: 100% !important;
 }
 
 /* Make sure YouTube doesn't fuck with these */
@@ -297,11 +297,11 @@
 
 /* TIME DISPLAY */
 
-#movie_player .ytp-chrome-bottom .ytp-time-display {
+.html5-video-player .ytp-chrome-bottom .ytp-time-display {
 	color: var(--pt-progress-text) !important;
 	text-shadow: none !important;
 	line-height: 47px !important;
-    padding: 0px 10px;
+    padding: 0px 10px !important;
     margin-top: -7px;
     font-size: 12px;
     height: 46px;
@@ -375,7 +375,7 @@
 
 .ytp-volume-slider-handle::before {
 	width: 58px;
-	background: var(--pt-main-colour);
+	background: var(--pt-volume-slider);
     height: 4px;
 }
 
@@ -444,120 +444,10 @@
 
 /* ################################# */
 
-/* TOP BUTTONS */
-
-.ytp-gradient-top {
-	display: none;
-}
-
-.ytp-chrome-top {
-	right: 0px !important;
-	left: 0px !important;
-	padding: 0px 10px;
-	height: 40px;
-}
-
-.ytd-channel-video-player-renderer .ytp-chrome-top {
-	display: none; /* this should only affect channel trailers. */
-}
-
-.ytp-big-mode .ytp-chrome-top .ytp-button {
-	padding-top: 0px;
-}
-
-.ytp-chrome-top .ytp-button.ytp-playlist-menu-button {
-    background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-    background-position: -78px -914px;
-    transition: .5s !important;
-    background-size: 220px;
-    width: 40px !important;
-    bottom: 5px;
-}
-
-.ytp-title-text {
-	padding: 0px !important;
-}
-
-.ytp-title-link {
-    position: relative;
-    width: fit-content;
-    font-size: 18px;
-    top: 8px;
-}
-
-.ytp-chrome-top .ytp-button.ytp-share-button {
-	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-	background-position: 2px -524px;
-	transition: .5s !important;
-	background-size: 220px;
-	width: 40px !important;
-	bottom: 5px;
-}
-
-.ytp-chrome-top .ytp-button.ytp-share-button svg {
-	display: none;
-}
-
-.ytp-chrome-top .ytp-button.ytp-cards-button {
-	background: url(chrome-extension://__MSG_@@extension_id__/img/2013-icons.png) no-repeat;
-	background-position: 5px -512px;
-	transition: .5s !important;
-	background-size: 200px;
-	width: 40px !important;
-	bottom: 5px;
-}
-
-.ytp-title-link.yt-uix-sessionlink.ytp-title-fullerscreen-link:hover {
-	cursor: pointer;
-}
-
-.ytp-share-panel-service-button svg {
-	display: inherit;
-}
-
-.ytp-share-panel-close svg {
-	margin: 0px 6px
-}
-
-.ytp-button.ytp-watch-later-button {
-	display: none !important;
-}
-
-/* ################################# */
-
 /* TOOLTIPS */
 
 .ytp-tooltip.ytp-bottom {
 	margin-top: 4px;
-}
-
-/* ################################# */
-
-/* SETTINGS MENU */
-
-.ytp-popup {
-	background: var(--pt-settings-bg) !important;
-}
-
-.ytp-popup.ytp-settings-menu {
-	bottom: 35px !important;
-    border-radius: 0 !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-panel-menu {
-	padding: 0px !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-menuitem-icon {
-	display: none !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-menuitem .ytp-menuitem-label {
-	padding-left: 20px !important;
-}
-
-.ytp-popup.ytp-settings-menu .ytp-menuitem[role="menuitemradio"] .ytp-menuitem-label {
-	padding-left: 35px !important;
 }
 
 /* ################################# */
